<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fillViewport="true"
        android:paddingHorizontal="20dp"
        android:scrollbars="none">

        <EditText
            android:id="@+id/miniDisplay"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/black"
            android:enabled="false"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:textColor="#C0C0C0"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />
    </HorizontalScrollView>

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="35sp"
        tools:ignore="LabelFor" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/display"
        android:background="@color/black"
        android:columnCount="4"
        android:padding="10dp"
        android:rowCount="5"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/plusBtn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/plusBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/divisionBtn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/divisionBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/clearBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit0Btn"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit0Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/plusMinusBtn"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/plusMinusBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit1Btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit1Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit2Btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit2Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit3Btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit3Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit4Btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit4Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit5Btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit5Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit6Btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit6Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit7Btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit7Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit8Btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit8Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/digit9Btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digit9Btn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/percentBtn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/percentBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/dotBtn"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/digitDotBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/multiplyBtn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/multiplyBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/minusBtn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/minusBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/equalBtn"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="#800080"
            android:onClick="handleOperation"
            android:text="@string/equalBtn"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </GridLayout>

</RelativeLayout>